--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
 
                 <ul id="sidemenu">
 
-                    <li><a href="#header">Chirag</a></li>
+                    <li><a href="#header">Home</a></li>
                     <li><a href="#about">About</a></li>
                     <li><a href="#services">Service</a></li>
                     <li><a href="#portfolio">Portfolio</a></li>
