added channel name

--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
 
             </nav>
             <div class="header-text">
-                <p>Data Science</p>
+                <p>Python Developer</p>
                 <h1>Hi, I'm <span>Chirag</span><br>Solanki from India</h1>
             </div>
         </div>
@@ -59,9 +59,10 @@
 
                     <div class="tab-contents active-tab" id="skills">
                         <ul>
-                            <li><span>Data Science</span><br>Analyze Data and make better decisions</li>
-                            <li><span>Python</span><br>Analyze Data and Extract insights, Data Visualization Utilizing libraries like NumPy, Pandas and Django.<br>Machine Learning, Task Automation</li>
+                            <li><span>C,C++</span><br>File Hendling, Generic Data structures, Creating Libraries,and Object-Oriented programming</li>
+                            <li><span>Python</span><br>Python Developer Strong Fundamemtal with Data structures.</li>
                             <li><span>SQL</span><br>Store, Retrive, Updating, Deleting, Searching and Manipualte Data in relational databases. Optimizing Database Performance<br>and Defining Database Schema</li>
+                            <li><span>Django</span>------------------------------<br></li>
                         </ul>
                     </div>
 
@@ -98,13 +99,6 @@
             <div class="services-list">
 
                 <div>
-                    <i class="fa-solid fa-code"></i>
-                    <h2>Data Science</h2>
-                    <p>Provided a wide range of services including Data collection, cleaning, analysis, Visualization, predictivem, modeling, Machine Learning, Statistical analysis, data pipline, development, nutural language processing and many more.</p>
-                    <a href="https://www.ibm.com/think/topics/data-science">Learn More</a>
-                </div>
-
-                <div>
                     <i class="fa-brands fa-python"></i>
                     <h2>Python</h2>
                     <p>Web Development, Data Analysis, machine learning, scripting, game development, desktop application development, API development, DevOps, testing, debugging, chatbot development, and IoT development.</p>
@@ -115,6 +109,13 @@
                     <i class="fa-solid fa-server"></i>
                     <h2>Sql</h2>
                     <p>data storage, querying, analysis, reporting, data warehousing, ETL (Extract, Transform, Load).</p>
+                    <a href="https://www.w3schools.com/sql/">Learn More</a>
+                </div>
+
+                <div>
+                    <i class="fa-solid fa-server"></i>
+                    <h2>Documentation</h2>
+                    <p>SDLC Documentation and reporting</p>
                     <a href="https://www.w3schools.com/sql/">Learn More</a>
                 </div>
 
